# boardgame-library-recommender

./: .dockerignore  .gitignore  .gitleaks.toml  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile copy  Dockerfile.ingest  LICENSE  README.md  changelog.md  conftest.py  fly.convention.dev.toml  fly.convention.toml  fly.db.dev.toml  fly.db.prod.toml  fly.dev.rehearsal.toml  fly.dev.toml  fly.ingest.toml  fly.toml  local_test_plan.md  pyproject.toml  scratch_fly.toml  todo.md
.github/: dependabot.yml  npm_audit_allowlist.json  pip_audit_allowlist.json
.github/workflows/: ci.yml  fly-deploy-prod.yml  fly-deploy.yml  pr-agent.yml  prod-health-alerts.yml
backend/: README.md  test_performance.py
backend/alembic/: env.py
backend/app/: convention_kiosk.py  crud.py  database.py  db_config.py  db_keepalive.py  image_processing.py  import_data.py  import_library_data.py  import_pax_data.py  main.py  models.py  recommender.py  runtime_profile.py  schemas.py  security.py  versioning.py
backend/scripts/: migrate_sqlite_to_postgres.py  run_post_import.py  setup_database.py  sql_runner.py  start.sh
backend/tests/: README.md  __init__.py  create_indexes.py  test_api_endpoints.py  test_bootstrap_fly_postgres_baseline.py  test_convention_kiosk.py  test_crud_helpers.py  test_crud_library_only_runtime.py  test_db_config.py  test_db_keepalive.py  test_db_queries.py  test_fly_postgres_backup.py  test_fly_postgres_restore.py  test_image_cache_fill.py  test_import_data.py  test_import_library_data.py  test_library_import_csv.py  test_main_cli_password.py  test_observability_controls.py  test_performance.py  test_player_filter.py  test_postgres_importer.py  (+18 more)
data_pipeline/: README.md  __init__.py
docs/: README.md  best_practices_migration_guide.md  convention_runtime_policy.md  deploy_rollback_runbook.md  engineering_guide.md  fly_environment_strategy.md  image_storage_migration_plan.md  postgres_migration_plan.md
frontend/: README.md  package-lock.json  package.json
logs/: README.md
scripts/: README.md  __init__.py  benchmark_recommendation_size.py  create_smoke_test_user.py  fly_deploy.sh  fly_postgres_backup.py  fly_postgres_common.py  fly_postgres_restore.py  fly_stack.sh  prepare_fly_rollback.py  record_deploy_traceability.py  run_prod_health_alerts.py  upload_files.sh  upload_to_fly_volume.sh  validate_auth_flow.py  validate_dev_deploy.py  validate_fly_health_checks.py  validate_fly_release.py  validate_performance_gate.py  validate_prod_alert_path.py  validate_prod_release.py  validate_recommendation_endpoint.py  validation_common.py
(+254 files in other folders)
