[tool.poetry]
name = "pax-tt-recommender"
version = "0.5.0"
description = "BoardGameGeek data pipeline and recommender system"
authors = ["MichoelSnow <michoelsnow@gmail.com>"]
readme = "README.md"
packages = [
    { include = "data_pipeline" }
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.12"
sqlalchemy = "^2.0.41"
requests = "^2.32.3"
pandas = "^2.2.3"
selenium = "^4.32.0"
beautifulsoup4 = "^4.13.4"
fastparquet = "^2024.11.0"
scipy = "^1.15.3"
scikit-learn = "^1.6.1"
implicit = "^0.7.2"
ipywidgets = "^8.1.7"
uvicorn = "^0.34.3"
gunicorn = "^23.0.0"
alembic = "^1.16.1"
httpx = "^0.28.1"
tqdm = "^4.67.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = "^3.5.0"
python-multipart = "^0.0.20"
python-dotenv = "^1.1.1"
duckdb = "^1.4.0"
lxml = "^6.0.1"
tenacity = "^9.1.2"
psycopg2-binary = "^2.9.11"
boto3 = "^1.42.63"
pillow = "^11.3.0"


[tool.poetry.group.dev.dependencies]
notebook = "==6.*"
jupyter-contrib-nbextensions = "^0.7.0"
jupyter-nbextensions-configurator = "0.6.3"
rapidfuzz = "^3.13.0"
pytest = "^9.0.2"
ruff = "^0.13.0"

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = ["data_pipeline/notebooks"]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
